--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -107,7 +107,7 @@ vi:
   SOCIALS: Mạng Xã Hội
   Add_Friend:  Kết Bạn
   Change_Avatar: Đổi Ảnh Đại Diện
-  groups: Nhóm
+  Groups: Nhóm
   more: Thêm
   about: Thông Tin
   Photos: Ảnh
