--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -8,6 +8,7 @@ vi:
     edit_post: Sửa bài viết
     delete: Xóa
     create_tour: Tạo tua du lịch
+    edit_tour: Cập nhật tour du lịch
   text:
     tour: Tour du lịch
     published: Đã chia sẻ
