--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -138,3 +138,6 @@ en:
   edit: Edit
   Comment: Comment
   delete: Delete
+  unfriend: Unfriend
+  add_friend: Add Friend
+  they_will_miss_you: They will miss you!
