--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -124,3 +124,6 @@ vi:
   edit: Chỉnh Sửa
   Comment: Bình Luận
   delete: Xoá
+  unfriend: Hủy Kết Bạn
+  add_friend: Kết Bạn
+  they_will_miss_you: Họ Sẽ Nhớ Bạn Rất Nhiều...
