--- a/config/locales/tour/vi.yml
+++ b/config/locales/tour/vi.yml
@@ -1,6 +1,6 @@
 vi:
   title: Tiêu đề
-  cost: Chi phí dự kiến/1 người
+  cost: Chi phí
   time: Thời gian
   place: Địa điểm
   vehicle: Phương tiện
