show place and custom page home

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -146,3 +146,5 @@ en:
   unfriend: Unfriend
   add_friend: Add Friend
   they_will_miss_you: They will miss you!
+  slogan: YOURS TO EXPLORE
+  slogan_small: Our destination is not a land, but a new way!
