--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -132,3 +132,5 @@ vi:
   unfriend: Hủy Kết Bạn
   add_friend: Kết Bạn
   they_will_miss_you: Họ Sẽ Nhớ Bạn Rất Nhiều...
+  slogan: TỰ DO KHÁM PHÁ
+  slogan_small: Đích đến của chúng ta không phải  là một vùng đất, mà là một cách mình mới!
