--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -156,3 +156,6 @@ en:
   Total_Tours: Total Tours
   Total_Status: Total Statuses
   Total_follow: Total follows
+  Not_found: Not found!
+  Search_post: Search post
+  Place_Info: Place Info
