--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -142,3 +142,6 @@ vi:
   Total_Tours: Tổng số tour du lịch
   Total_Status: Tổng số bài trạng thái
   Total_follow: Tổng số lượt theo dõi
+  Not_found: Không tìm thấy kết quả!
+  Search_post: Tìm bài viết
+  Place_Info: Thông tin địa điểm
